@@ -1,4 +1,4 @@
-christine is new gstreamer based media player.
+christine is a new gstreamer based media player.
 
 This means, christine can play your music and videos, and
 in the next future, radio stations too.
