@@ -1,15 +1,20 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
-
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<!-- Generated with glade3
+	Version: 3.0.1
+	Date: Thu Jan  4 14:26:57 2007
+	User: markuz
+	Host: cucusa
+-->
 <glade-interface>
-
-<widget class="GtkAboutDialog" id="about">
-  <property name="visible">True</property>
-  <property name="destroy_with_parent">True</property>
-  <property name="name" translatable="yes">Christine</property>
-  <property name="copyright" translatable="yes">2006 (c) Marco Antonio Islas Cruz</property>
-  <property name="comments" translatable="yes">A small and cute media player for GNOME</property>
-  <property name="license">		    GNU GENERAL PUBLIC LICENSE
+  <widget class="GtkAboutDialog" id="about">
+    <property name="visible">True</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="copyright">2006 (c) Marco Antonio Islas Cruz</property>
+    <property name="comments">A small and cute media player for GNOME</property>
+    <property name="website">http://christine.sourceforge.net</property>
+    <property name="website_label">http://christine.sourceforge.net</property>
+    <property name="license">		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
 
  Copyright (C) 1989, 1991 Free Software Foundation, Inc.
@@ -38,11 +43,23 @@
 This General Public License does not permit incorporating Christine into
 proprietary programs.  
 </property>
-  <property name="wrap_license">False</property>
-  <property name="authors">Marco Antonio Islas Cruz</property>
-  <property name="documenters">Marco Antonio Islas Cruz</property>
-  <property name="artists">Marco Antonio Islas Cruz</property>
-  <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
-</widget>
-
+    <property name="authors">Marco Antonio Islas Cruz</property>
+    <property name="documenters">Marco Antonio Islas Cruz</property>
+    <property name="translator_credits">translator-credits</property>
+    <property name="artists">Marco Antonio Islas Cruz</property>
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="dialog-vbox1">
+        <property name="visible">True</property>
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="dialog-action_area1">
+            <property name="visible">True</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">GTK_PACK_END</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
 </glade-interface>
